--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,13 @@
 body {
     margin: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    display: grid;
+    /* flex-direction: column; */
+    /* align-items: center; */
     font-size: 18px;
-}
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    background-color: black;
+}   
 
 h1 {
     font-size: 36x;
@@ -17,10 +20,24 @@ h1 {
     border: 1px solid #999;
     border-radius: 4px;
     margin: 24px 24px 0;
+    background-color: black;
+    color: lightblue;
 }
 
 .api-content {
     font-weight: bold;
     font-style: italic;
     color: #999;
+    background-color: lightblue;
+}
+.emoji{
+    font-size: 5rem;
+}
+.card-body{
+    background-color: lightblue;
+}
+input{
+    border-radius: 1rem;
+    border-color: lightblue;
+    justify-content: center;
 }
